--- a/pushy/pom.xml
+++ b/pushy/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>com.turo</groupId>
         <artifactId>pushy-parent</artifactId>
-        <version>0.11.3</version>
+        <version>0.11.3-performance</version>
     </parent>
 
     <dependencies>
