--- a/pushy/pom.xml
+++ b/pushy/pom.xml
@@ -28,7 +28,7 @@
     <name>Pushy</name>
 
     <parent>
-        <groupId>com.turo</groupId>
+        <groupId>com.yoloho.push</groupId>
         <artifactId>pushy-parent</artifactId>
         <version>0.11.3-performance</version>
     </parent>
