--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -26,12 +26,12 @@
 
     <parent>
         <artifactId>pushy-parent</artifactId>
-        <groupId>com.turo</groupId>
-        <version>0.11.3</version>
+        <groupId>com.yoloho.push</groupId>
+        <version>0.11.3-performance</version>
     </parent>
 
     <artifactId>pushy-benchmark</artifactId>
-  <version>0.11.3</version>
+  <version>0.11.3-performance</version>
     <packaging>jar</packaging>
 
     <name>Pushy benchmarks</name>
