--- a/dropwizard-metrics-listener/pom.xml
+++ b/dropwizard-metrics-listener/pom.xml
@@ -25,14 +25,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pushy-dropwizard-metrics-listener</artifactId>
-  <version>0.11.3</version>
+  <version>0.11.3-performance</version>
     <name>Dropwizard Metrics listener for Pushy</name>
     <description>A metrics listener for Pushy that uses the Dropwizard Metrics library for gathering and reporting metrics.</description>
 
     <parent>
-        <groupId>com.turo</groupId>
+        <groupId>com.yoloho.push</groupId>
         <artifactId>pushy-parent</artifactId>
-        <version>0.11.3</version>
+        <version>0.11.3-performance</version>
     </parent>
 
     <dependencies>
